--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "parcel index.html -d docs/",
-    "build": "parcel build index.html -d docs/"
+    "start": "parcel src/index.html -d docs/",
+    "build": "parcel build src/index.html -d docs/"
   },
   "license": "MIT",
   "dependencies": {
@@ -15,7 +15,10 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "babel-preset-nano-react-app": "^0.1.0",
-    "parcel-bundler": "^1.12.4"
+    "copy-webpack-plugin": "^5.1.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "babel": {
     "presets": [
