--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel src/index.html -d docs/",
-    "build": "parcel build src/index.html -d docs/ --public-url ./"
+    "build": "rm -rf docs; mkdir docs; cp -R src/assets/img docs; parcel build src/index.html -d docs/ --public-url ./"
   },
   "license": "MIT",
   "dependencies": {
@@ -15,10 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "babel-preset-nano-react-app": "^0.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "parcel-bundler": "^1.12.4"
   },
   "babel": {
     "presets": [
